--- a/templates/adqppmanage.html
+++ b/templates/adqppmanage.html
@@ -145,7 +145,7 @@
                 },
                 type: 'POST',
                 success: function (response) {
-                    console.log(response);
+                   document.write(response);    
                 },
                 error: function (error) {
 
