change in design
Some Style changes

Co-Authored-By: Manuel Robert <manuelrobert@users.noreply.github.com>

--- a/templates/clregister.html
+++ b/templates/clregister.html
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                             <button class="btn btn-primary  btn-block"  data-toggle="modal" data-target="#cl_cr_modal">
-                                Create Course
+                                REGISTER
                             </button>
                             <!-- </form> -->
                         </div>
