--- a/templates/stregister.html
+++ b/templates/stregister.html
@@ -173,7 +173,7 @@
                                     </select>
                             </div>
                             <button class="btn btn-primary  btn-block" data-toggle="modal" data-target="#st_cr_modal">
-                                Create Course
+                                REGISTER
                             </button>
                             <!-- </form> -->
                         </div>
