--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Login</h1>
                   </div>
                   <form class="user" name="lgform" id="lgform" action="/log_ver" method="POST">
                     <div class="form-group">
@@ -79,19 +79,17 @@
                     </div>
                     <input type="submit" value="Login" class="btn btn-primary btn-user btn-block">
                     <hr>
-                    <a href="index.html" class="btn btn-google btn-user btn-block">
-                      <i class="fab fa-google fa-fw"></i> Login with Google
-                    </a>
-                    <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                      <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                    </a>
+                   
+                    
                   </form>
-                  <hr>
+                  
                   <div class="text-center">
                     <a class="small" href="forgot-password.html">Forgot Password?</a>
+                    <hr>
                   </div>
                   <div class="text-center">
-                    <a class="small" href="register.html">Create an Account!</a>
+                    <a class="small" href="accountc">Create an Account!</a>
+                    <hr>
                   </div>
                 </div>
               </div>
