--- a/templates/thregister.html
+++ b/templates/thregister.html
@@ -187,7 +187,7 @@
                                     </select>
                             </div>
                             <button class="btn btn-primary  btn-block" data-toggle="modal" data-target="#tr_cr_modal">
-                                Create Course
+                                REGISTER
                             </button>
                             <!-- </form> -->
                         </div>
