--- a/templates/adqppmanage.html
+++ b/templates/adqppmanage.html
@@ -163,7 +163,7 @@
                 },
                 type: 'POST',
                 success: function (response) {
-                   console.log(response);    
+                   document.write(response);   
                 },
                 error: function (error) {
 
