--- a/templates/clsidenavbar.html
+++ b/templates/clsidenavbar.html
@@ -32,12 +32,6 @@
         <span>Courses</span>
       </a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="">
-          <i class="fas fa-fw fa-cog"></i>
-          <span>Subjects</span>
-        </a>
-      </li>
       <li class="nav-item">
         <a class="nav-link collapsed" href="/clteachers">
           <i class="fas fa-fw fa-cog"></i>
@@ -48,6 +42,12 @@
         <a class="nav-link collapsed" href="/clstudents">
           <i class="fas fa-fw fa-cog"></i>
           <span>Students</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/clexammanage">
+          <i class="fas fa-fw fa-cog"></i>
+          <span>Examinations</span>
         </a>
       </li>
   </ul>
