--- a/templates/stsidenavbar.html
+++ b/templates/stsidenavbar.html
@@ -26,25 +26,25 @@
     <div class="sidebar-heading">
       Interface
     </div>
-    <!-- <li class="nav-item">
-      <a class="nav-link collapsed" href="/clcourse">
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="/stexam">
         <i class="fas fa-fw fa-cog"></i>
-        <span>Courses</span>
+        <span>Examinations</span>
       </a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="">
           <i class="fas fa-fw fa-cog"></i>
           <span>Subjects</span>
         </a>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="/clteachers">
           <i class="fas fa-fw fa-cog"></i>
           <span>Teachers</span>
         </a>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="/clstudents">
           <i class="fas fa-fw fa-cog"></i>
           <span>Students</span>
