--- a/templates/adsidenavbar.html
+++ b/templates/adsidenavbar.html
@@ -71,5 +71,11 @@
       <span>Question Panels</span>
     </a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link collapsed" href="/ansvaluate">
+      <i class="fas fa-fw fa-cog"></i>
+      <span>Valuation</span>
+    </a>
+  </li>
 </ul>
   <!-- End of Sidebar -->
