--- a/templates/login.html
+++ b/templates/login.html
@@ -2,58 +2,7 @@
 <html lang="en">
 
 <head>
-  <style>
 
-    .overlay {
-      height: 100%;
-      width: 100%;
-      display: none;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: rgb(0,0,0);
-      background-color: rgba(0,0,0, 0.9);
-    }
-    
-    .overlay-content {
-      position: relative;
-      top: 25%;
-      width: 100%;
-      text-align: center;
-      margin-top: 30px;
-    }
-    
-    .overlay a {
-      padding: 8px;
-      text-decoration: none;
-      font-size: 36px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-    }
-    
-    .overlay a:hover, .overlay a:focus {
-      color: #f1f1f1;
-      text-decoration: none;
-    }
-    
-    .overlay .closebtn {
-      position: absolute;
-      top: 20px;
-      right: 45px;
-      font-size: 60px;
-    }
-    
-    @media screen and (max-height: 450px) {
-      .overlay a {font-size: 20px}
-      .overlay .closebtn {
-      font-size: 40px;
-      top: 15px;
-      right: 35px;
-      }
-    }
-    </style>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -138,35 +87,10 @@
                     <a class="small" href="forgot-password.html">Forgot Password?</a>
                     <hr>
                   </div>
-                  
-
-                  <div id="myNav" class="overlay">
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <div class="overlay-content">
-                      <a href="sregister" >Student</a>
-                      <a href="tregister">Teacher's </a>
-                      <a href="cregister">College</a>
-                    </div>
+                  <div class="text-center">
+                    <a class="small" href="accountc">Create an Account!</a>
+                    <hr>
                   </div>
-                  
-                  
-                  <span style="font-size:20px;cursor:pointer;color: gray;" onclick="openNav()">Create an Account!</span>
-                  
-                  <script>
-                  function openNav() {
-                    document.getElementById("myNav").style.display = "block";
-                  }
-                  
-                  function closeNav() {
-                    document.getElementById("myNav").style.display = "none";
-                  }
-                  </script>
-                       
-
-
-
-
-                  
                 </div>
               </div>
             </div>
